# zona_the_secret_of_chernobyl

./: .coveragerc  LICENSE.txt  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst
notebooks/: results_in_dice_throw.html  roll_effects.html  zona_standard_test_experiment.ipynb
src/zona/: __init__.py  __main__.py  dices.py  rolls.py
tests/: test_zona.py
