[tool.poetry]
name = "zona-the-secret-of-chernobyl"
version = "0.1.0"
description = ""
authors = ["Chimney343"]
readme = "README.md"
packages = [{include = "zona_the_secret_of_chernobyl"}]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
pandas = "^1.5.2"
plotly = "^5.11.0"
ipywidgets = "^8.0.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.2"
black = "^22.12.0"
isort = "^5.11.4"
jupyterlab-code-formatter = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
